; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_parse.c_ngx_parse_size.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_parse.c_ngx_parse_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@NGX_ERROR = common dso_local global i32 0, align 4
@NGX_MAX_SIZE_T_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_parse_size(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @NGX_ERROR, align 4
  store i32 %15, i32* %2, align 4
  br label %57

16:                                               ; preds = %1
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* %5, align 8
  %21 = sub i64 %20, 1
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  switch i32 %24, label %35 [
    i32 75, label %25
    i32 107, label %25
    i32 77, label %30
    i32 109, label %30
  ]

25:                                               ; preds = %16, %16
  %26 = load i64, i64* %5, align 8
  %27 = add i64 %26, -1
  store i64 %27, i64* %5, align 8
  %28 = load i32, i32* @NGX_MAX_SIZE_T_VALUE, align 4
  %29 = sdiv i32 %28, 1024
  store i32 %29, i32* %8, align 4
  store i32 1024, i32* %7, align 4
  br label %37

30:                                               ; preds = %16, %16
  %31 = load i64, i64* %5, align 8
  %32 = add i64 %31, -1
  store i64 %32, i64* %5, align 8
  %33 = load i32, i32* @NGX_MAX_SIZE_T_VALUE, align 4
  %34 = sdiv i32 %33, 1048576
  store i32 %34, i32* %8, align 4
  store i32 1048576, i32* %7, align 4
  br label %37

35:                                               ; preds = %16
  %36 = load i32, i32* @NGX_MAX_SIZE_T_VALUE, align 4
  store i32 %36, i32* %8, align 4
  store i32 1, i32* %7, align 4
  br label %37

37:                                               ; preds = %35, %30, %25
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load i32*, i32** %39, align 8
  %41 = load i64, i64* %5, align 8
  %42 = call i32 @ngx_atosz(i32* %40, i64 %41)
  store i32 %42, i32* %6, align 4
  %43 = load i32, i32* %6, align 4
  %44 = load i32, i32* @NGX_ERROR, align 4
  %45 = icmp eq i32 %43, %44
  br i1 %45, label %50, label %46

46:                                               ; preds = %37
  %47 = load i32, i32* %6, align 4
  %48 = load i32, i32* %8, align 4
  %49 = icmp sgt i32 %47, %48
  br i1 %49, label %50, label %52

50:                                               ; preds = %46, %37
  %51 = load i32, i32* @NGX_ERROR, align 4
  store i32 %51, i32* %2, align 4
  br label %57

52:                                               ; preds = %46
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %6, align 4
  %55 = mul nsw i32 %54, %53
  store i32 %55, i32* %6, align 4
  %56 = load i32, i32* %6, align 4
  store i32 %56, i32* %2, align 4
  br label %57

57:                                               ; preds = %52, %50, %14
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @ngx_atosz(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
